[package]
name = "src"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midi-toolkit-rs = { git = "https://github.com/arduano/midi-toolkit-rs", rev = "326f0ce" }
stopwatch = { git = "https://github.com/ellisonch/rust-stopwatch.git" }
spin_sleep = { git = "https://github.com/alexheretic/spin-sleep" }
libloading = "0.5"
kdmapi = { git = "https://github.com/arduano/kdmapi" }
crossterm = "0.5.0"
rand = "0.8"